# core/docs/swagger.yaml
@@ -805,14 +805,14 @@ definitions:
         type: string
       openapi_config:
         $ref: '#/definitions/model.MCPOpenAPIConfig'
-      proxy_sse_config:
-        $ref: '#/definitions/model.GroupMCPProxySSEConfig'
+      proxy_config:
+        $ref: '#/definitions/model.GroupMCPProxyConfig'
       type:
         $ref: '#/definitions/model.GroupMCPType'
       update_at:
         type: string
     type: object
-  model.GroupMCPProxySSEConfig:
+  model.GroupMCPProxyConfig:
     properties:
       headers:
         additionalProperties:
@@ -964,7 +964,7 @@ definitions:
         type: string
       openapi_spec:
         type: string
-      server:
+      server_addr:
         type: string
       v2:
         type: boolean
@@ -1185,8 +1185,8 @@ definitions:
         $ref: '#/definitions/model.MCPOpenAPIConfig'
       price:
         $ref: '#/definitions/model.MCPPrice'
-      proxy_sse_config:
-        $ref: '#/definitions/model.PublicMCPProxySSEConfig'
+      proxy_config:
+        $ref: '#/definitions/model.PublicMCPProxyConfig'
       readme:
         type: string
       readme_url:
@@ -1202,7 +1202,7 @@ definitions:
       update_at:
         type: string
     type: object
-  model.PublicMCPProxySSEConfig:
+  model.PublicMCPProxyConfig:
     properties:
       headers:
         additionalProperties:
@@ -1237,6 +1237,7 @@ definitions:
   model.PublicMCPType:
     enum:
     - mcp_proxy_sse
+    - mcp_proxy_streamable
     - mcp_git_repo
     - mcp_openapi
     type: string
@@ -1244,6 +1245,7 @@ definitions:
       PublicMCPTypeGitRepo: read only
     x-enum-varnames:
     - PublicMCPTypeProxySSE
+    - PublicMCPTypeProxyStreamable
     - PublicMCPTypeGitRepo
     - PublicMCPTypeOpenAPI
   model.RequestDetail:
@@ -5207,10 +5209,20 @@ paths:
     get:
       responses: {}
       summary: Public MCP SSE Server
+  /mcp/public/{id}/streamable:
+    delete:
+      responses: {}
+      summary: Public MCP Streamable Server
+    get:
+      responses: {}
+      summary: Public MCP Streamable Server
+    post:
+      responses: {}
+      summary: Public MCP Streamable Server
   /mcp/public/message:
     post:
       responses: {}
-      summary: MCP SSE Proxy
+      summary: Public MCP SSE Server
   /v1/audio/speech:
     post:
       description: AudioSpeech
