# core/router/mcp.go
@@ -11,6 +11,9 @@ func SetMCPRouter(router *gin.Engine) {
 
 	mcpRoute.GET("/public/:id/sse", controller.PublicMCPSseServer)
 	mcpRoute.POST("/public/message", controller.PublicMCPMessage)
+	mcpRoute.GET("/public/:id/streamable", controller.PublicMCPStreamable)
+	mcpRoute.POST("/public/:id/streamable", controller.PublicMCPStreamable)
+	mcpRoute.DELETE("/public/:id/streamable", controller.PublicMCPStreamable)
 
 	mcpRoute.GET("/group/:id/sse", controller.GroupMCPSseServer)
 	mcpRoute.POST("/group/message", controller.GroupMCPMessage)
